--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     }
 
     // Use a direct audio file URL
-    const audio = new Audio("https://pixabay.com/users/freesound_community-46691455/");
+    const audio = new Audio("fireworks-29629.mp3");
     audio.volume = 0.1;
     audio.play();
 
